# osu-hydro-pce

./: .gitignore  .osu-hydro-pce.conf.swp  CMakeLists.txt  README.md  eos-old.for  osu-hydro-pce.conf
eos/: CMakeLists.txt  eos-conformal.py  eos-gluon.py  eos-tests.py  eos.py
src/: #osu_hydro.for#  .#eos.for  .#osu_hydro.for  arsenal.for  defs.h  eos.for  initialization.for  input_function.for  osu_hydro.for  osu_hydro.for~  util.for
test/: .events.hdf.swp  average_events.py  create-plots  create_gauss.py  fort.100  fort.6  mathematica_plot.txt  profile-alt.npy  profile.npy  profile13.npy  profilep0.npy  profilex15n13.npy  profilex5n2.npy  profilex9n13.npy  profilex9n2.npy  run-events-and-plot  run-events-pce  run-hydro.py  test.py
test/plots/: ipython.html
test/profiles/: GlauberMCprofile.npy  profileTempGauss.npy  profileTempGauss150.npy  profileTempGauss190.npy  profileTempGauss199.npy  profileTempGauss200.npy  profileTempGauss201.npy  profileTempGauss210.npy  profileTempGauss220.npy  profileTempGauss230.npy  profileTempGauss240.npy  profileTempGauss250.npy  profileTempGauss300.npy  profileTempGauss400.npy  profileTempGauss500.npy  profileTempGaussWide300.npy  profilex10n2.npy  profilex12n13.npy  profilex12n2.npy  profilex15n13p1Gauss.npy  profilex15n13p1GaussAlt.npy  profilex15n13p1GaussCenter.npy
